Fixed horizontal scrollbar

--- a/cdc-frontend-app/src/index.scss
+++ b/cdc-frontend-app/src/index.scss
@@ -80,7 +80,6 @@ input[type="reset"] {
 .App-Content {
   background-color: rgba(map-get($map: $theme-colors, $key: "primaryAlt"), 0.75);
   padding-bottom: 3rem;
-  width: 100vw;
 }
 
 .App-Sections {
